1.1.0
==================
- Applied patch to fix COMP-105
	"DictionaryAdapter can't handle properties with the 'new' keyword"

- Applied patch from Mike Nichols fixing COMP-82
	"Default Converter Refactoring Patch"

- Applied patch from Mike Nichols fixing COMP-81
	"DataBinder Generic List More Eager Collection"

- Applied patch from Felix Gartsman fixing COMP-53
	"Changed some TreeBuilder methods visibility to allow constructing nodes from more containers"

- Node: changed to use generic list

- JSCodeGenerator: changed not to duplicate the whole code content to display in error message (whoever thought this would be a good idea?)

Beta 2
======

- Fixed MR-383
  "Databinding object with non-public constructor"
  Added ability to create types with non-public constructors. Not sure I like it, but...

- Changed DefaultConversion behavior: empty string is now considered 
  a non succeeded conversion. It used to be considered successful returning false. 

  This might be a breaking change!


- Applied Brian Chan's patch fixing MR-282
  "Binding to a nested IList<> or not null nested List<> fails"

- Applied Adam Tybor's patch fixing MR-289
  "Array Binding for Prototype Style Serialization"

- Applied Adam Tybor's patch fixing MR-266
  "Fix for GetErrorSummary() throwing an KeyNotFoundException for SmartDispatch Controller and Binder"

- Fixed COMP-27
  "Validators in a Chain - ValidateNonEmpty fails with BelongsTo"

- Changed DefaultConverter behavior:
  
  -> If we are dealing with a primitive, non-null values will always
     set conversionSuceeded to true
     That's because the value was on the form, and the binder needs to set it
  
  -> If we are dealing with a nullable, the conversionSuceeded will be set to true
     if the nested conversion succeeds or if the input is different from null.

- Fixed COMP-8: Converter is not able to deal with Nullables<>

- Fixed COMP-6: Nullable boolean cannot be bound

- Updated to check argument inheritance for conversions.
