@@ -12,6 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 // 
+#if !MONO
 namespace Castle.Components.Binder
 {
 	using System;
@@ -66,3 +67,4 @@ namespace Castle.Components.Binder
 		}
 	}
 }
+#endif
